// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Callback View Should able to provide callback view 1`] = `
"
    <!DOCTYPE html>
    <html>
        <title></title>
        <body>
            <div class=\\"container\\"></div>
            <script type=\\"text/javascript\\">
                var message = '{\\"type\\":\\"auth\\",\\"lorem\\":\\"ipsum\\"}';
                (function(){
                    window.onbeforeunload = function () {
                        window.opener.onCancelLogin(window)
                    };
                    window.opener.onLogin(window, JSON.parse(message));
                })()
            </script>
        </body>
    </html>
    "
`;

exports[`Social Login Dialogs Should return facebook dialog properly 1`] = `
Object {
  "client_id": "",
  "display": "popup",
}
`;

exports[`Social Login Dialogs Should return github dialog properly 1`] = `
Object {
  "client_id": "",
}
`;

exports[`Social Login Dialogs Should return gitlab dialog properly 1`] = `
Object {
  "client_id": "",
  "response_type": "code",
}
`;

exports[`Social Login Dialogs Should return google dialog properly 1`] = `
Object {
  "access_type": "offline",
  "client_id": "",
  "include_granted_scopes": "true",
  "response_type": "code",
  "scope": "https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/userinfo.profile",
}
`;
